
# current

Changes:
- Use lua_pcall when calling the main module and report errors to the user.
- Output all errors to stderr like the PUC Lua interpreter does.

# 1.0.1

Changes:
- Added the '-v' and '--lua-version' options to show the Lua language version.

# v1.0.0

- Initial release