@@ -4,6 +4,7 @@
 Changes:
 - Use lua_pcall when calling the main module and report errors to the user.
 - Output all errors to stderr like the PUC Lua interpreter does.
+- Output a warning for C modules that are found at one of package.cpath locations.
 
 # 1.0.1
 
